@@ -7,6 +7,7 @@ debbugs (3.0.0~alpha.1) unstable; urgency=medium
   * Actually return message/rfc822 when there is a single message instead
     of mbox (closes: #1009181)
   * Fix missing escaping of comma in address fields (closes: #1041638)
+  * Sort blocked-by (closes: 751808), thanks to Tim Landscheidt.
 
  -- Don Armstrong <don@debian.org>  Fri, 09 Mar 2018 11:17:10 -0800
 
